@@ -25,6 +25,7 @@
     * Fix not following the configured resolution
     * Added api/v1/status endpoint
     * Added new endpoint for updating prusalink python package
+    * Added api/v1/transfer endpoint
 
 0.7.0rc2
     * Support thermal model errors (FW 3.12)
